# cargo-ox

./: Cargo.toml  README.md  setup_ollama.sh
.github/workflows/: ci.yml
src/: configuration.rs  explain.rs  llm.rs  main.rs  prompts.rs  refactor.rs
